@@ -1,5 +1,10 @@
 2022-05-09  Mark Wielaard  <mark@klomp.org>
 
+	* debuginfod-client.c (debuginfod_query_server): Add
+	curl_easy_setopt_ck macro, use it for all curl_easy_setopt calls.
+
+2022-05-09  Mark Wielaard  <mark@klomp.org>
+
 	* debuginfod-client.c (debuginfod_write_callback): Check result
 	of curl_easy_getinfo.
 
